Ass-1/getting_started/test_files/semantic_errors/StatementAfterReturn.cpm
class StatementAfterReturn {

  getValue(): int {
    value := 10
    return value
    print(value)   // @error - semantic (unreachable statement after return)
  }

}

main() : int {
  print(StatementAfterReturn().getValue())
  return 0
}